done app calculator calories

--- a/lab5/Calories/app/src/main/res/layout-land/activity_main.xml
+++ b/lab5/Calories/app/src/main/res/layout-land/activity_main.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="ped.bstu.by.calories.MainActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <GridLayout
-        android:layout_width="576dp"
-        android:layout_height="295dp"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:rowCount="7"
-        android:columnCount="2"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:columnCount="2">
 
         <TextView
             android:id="@+id/textViewSex"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            style="@style/TextViewStyle"
             android:layout_row="0"
             android:layout_column="0"
-            android:text="Пол" />
+            android:text="@string/sex" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <RadioGroup
+                android:id="@+id/radioGroup"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:orientation="horizontal">
@@ -35,23 +30,22 @@
                     android:id="@+id/radioButtonMan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Мужской"/>
+                    android:checked="true"
+                    android:text="@string/man"/>
                 <RadioButton
                     android:id="@+id/radioButtonWoman"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Женский"/>
+                    android:text="@string/woman"/>
             </RadioGroup>
         </LinearLayout>
 
         <TextView
             android:id="@+id/textViewWeight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            style="@style/TextViewStyle"
             android:layout_row="1"
             android:layout_column="0"
-            android:text="Вес" />
+            android:text="@string/weight" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -60,27 +54,23 @@
 
             <EditText
                 android:id="@+id/editTextWeight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
+                style="@style/EditText"
                 android:inputType="number"/>
 
             <TextView
                 android:id="@+id/textViewKg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="кг." />
+                android:text="@string/weight_units" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/textViewHeight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            style="@style/TextViewStyle"
             android:layout_row="2"
             android:layout_column="0"
-            android:text="Рост" />
+            android:text="@string/height" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -89,27 +79,23 @@
 
             <EditText
                 android:id="@+id/editTextHeight"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
+                style="@style/EditText"
                 android:inputType="number"/>
 
             <TextView
                 android:id="@+id/textViewSm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="см." />
+                android:text="@string/height_units" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/textViewAge"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            style="@style/TextViewStyle"
             android:layout_row="3"
             android:layout_column="0"
-            android:text="Возраст" />
+            android:text="@string/age" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -118,65 +104,54 @@
 
             <EditText
                 android:id="@+id/editTextYears"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
+                style="@style/EditText"
                 android:inputType="number"/>
 
             <TextView
                 android:id="@+id/textViewYears"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="лет" />
+                android:text="@string/age_units" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/textViewActivityLevel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
+            style="@style/TextViewStyle"
             android:layout_row="4"
             android:layout_column="0"
-            android:text="Уровень активности" />
+            android:text="@string/activity" />
 
         <Spinner
             android:id="@+id/spinner"
+            android:entries="@array/activity_level"
             android:layout_width="230dp"
             android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_column="0"
             android:layout_row="5"
-            android:layout_columnSpan="2"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
             <TextView
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
+                style="@style/TextViewResults"
                 android:id="@+id/textView"
-                android:text="Результат:"
+                android:text="@string/result"
                 />
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/textViewResults"
-                android:layout_gravity="center_horizontal"
-                android:text="1532"/>
+                style="@style/Results"
+                android:id="@+id/textViewResults" />
         </LinearLayout>
-
 
         <Button
             android:id="@+id/buttonPrintResults"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_columnSpan="2"
-            android:layout_gravity="center_horizontal"
-            android:layout_row="6"
+            style="@style/Button"
+            android:layout_column="1"
+            android:layout_row="5"
             android:onClick="onClickPrintResults"
-            android:text="Рассчитать" />
+            android:text="@string/print" />
 
     </GridLayout>
-</android.support.constraint.ConstraintLayout>
+
+</LinearLayout>
