--- a/lab5/Calories/app/src/main/res/layout/activity_main.xml
+++ b/lab5/Calories/app/src/main/res/layout/activity_main.xml
@@ -6,4 +6,159 @@
     android:layout_height="match_parent"
     tools:context="ped.bstu.by.calories.MainActivity">
 
+    <GridLayout
+        android:layout_width="576dp"
+        android:layout_height="295dp"
+        android:rowCount="7"
+        android:columnCount="2"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp">
+
+        <TextView
+            android:id="@+id/textViewSex"
+            style="@style/TextViewStyle"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:text="@string/sex" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:orientation="horizontal">
+                <RadioButton
+                    android:id="@+id/radioButtonMan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/man"
+                    android:checked="true"/>
+                <RadioButton
+                    android:id="@+id/radioButtonWoman"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/woman"/>
+            </RadioGroup>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewWeight"
+            style="@style/TextViewStyle"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:text="@string/weight" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextWeight"
+                style="@style/EditText"
+                android:inputType="number"/>
+
+            <TextView
+                android:id="@+id/textViewKg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight_units" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewHeight"
+            style="@style/TextViewStyle"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:text="@string/height" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextHeight"
+                style="@style/EditText"
+                android:inputType="number"/>
+
+            <TextView
+                android:id="@+id/textViewSm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/height_units" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewAge"
+            style="@style/TextViewStyle"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:text="@string/age" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextYears"
+                style="@style/EditText"
+                android:inputType="number"/>
+
+            <TextView
+                android:id="@+id/textViewYears"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/age_units" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textViewActivityLevel"
+            style="@style/TextViewStyle"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:text="@string/activity" />
+
+        <Spinner
+            android:id="@+id/spinner"
+            android:entries="@array/activity_level"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="5"
+            android:layout_columnSpan="2"
+            android:orientation="vertical"
+            >
+            <TextView
+                style="@style/TextViewResults"
+                android:id="@+id/textView"
+                android:text="@string/result"
+                />
+            <TextView
+                style="@style/Results"
+                android:id="@+id/textViewResults" />
+        </LinearLayout>
+
+
+        <Button
+            android:id="@+id/buttonPrintResults"
+            style="@style/Button"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_row="6"
+            android:onClick="onClickPrintResults"
+            android:text="@string/print" />
+
+    </GridLayout>
+
 </android.support.constraint.ConstraintLayout>
