--- a/lab8-9/FireBase/app/src/main/res/layout/activity_sign_up.xml
+++ b/lab8-9/FireBase/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="User Registration"
+            android:text="@string/userRegTitle"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal" />
 
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter email"
+            android:hint="@string/hintEnterEmail"
             android:inputType="textEmailAddress" />
 
         <EditText
@@ -33,7 +33,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:hint="Enter password"
+            android:hint="@string/hintEnterPassword"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/editTextRepeatPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:hint="@string/hintRepeatPassword"
             android:inputType="textPassword" />
 
         <Button
@@ -41,10 +49,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="SignUp" />
+            android:text="@string/SignUp" />
 
         <TextView
-            android:text="Already Registered? Signin Here"
+            android:text="@string/alreadyReg"
             android:id="@+id/textViewSignIn"
             android:textAlignment="center"
             android:layout_margin="15dp"
