--- a/lab8-9/FireBase/app/src/main/res/layout/list_item.xml
+++ b/lab8-9/FireBase/app/src/main/res/layout/list_item.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="15dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_row="2"
+    android:layout_column="2">
 
-    <TextView
-        android:id="@+id/tvListName"
+    <android.support.v7.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
-        android:paddingBottom="10dp"
-        android:text="Student Name"
-        android:textAlignment="center"
-        android:textSize="24dp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="150dp"
-        android:layout_height="150dp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
-    <TextView
-        android:id="@+id/tvListFaculty"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ФИТ"
-        android:paddingTop="10dp"
-        android:layout_below="@+id/tvListName"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"/>
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tvListCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:layout_below="@+id/tvListName"
-        android:layout_toEndOf="@+id/tvListFaculty"
-        android:layout_toRightOf="@+id/tvListFaculty"/>
+            <ImageView
+                android:id="@+id/photo_imageView"
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:paddingLeft="20dp"
+                app:srcCompat="@mipmap/ic_launcher"/>
 
-</RelativeLayout>
+            <LinearLayout
+                android:paddingLeft="50dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
+
+                <TextView
+                    android:id="@+id/name_textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    tools:text="Oleg Gutsev"/>
+
+                <TextView
+                    android:id="@+id/mark_textView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    tools:text="3"/>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
